# class_project_student_management_system_fastapi

./: .gitignore  README.md  auth.py  crud.py  database.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  schemas.py
studysync-view-main/: README.md  index.html  package.json  tailwind.config.ts
studysync-view-main/src/: App.tsx  index.css
studysync-view-main/src/components/auth/: ProtectedRoute.tsx
studysync-view-main/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  Header.tsx
studysync-view-main/src/pages/: Courses.tsx  Dashboard.tsx  Enrollments.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Students.tsx
studysync-view-main/src/services/: api.ts  auth.ts  courses.ts  enrollments.ts  students.ts
