[project]
name = "student-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.1.0",
    "fastapi>=0.104.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "uvicorn[standard]>=0.24.0",
]
